<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="userEmailInputLabel">
        In order to utilize all of Emergency Messaging\'s features, please enter a Google email address and password.
    </string>
    <string name="userEmailPasswordInputLabel">Email Password:</string>
    <string name="passwordHint">Password</string>
    <string name="skipToMainButton">Skip</string>
    <string name="submitEmailInfoButton">Submit</string>
    
    <string name="appName">People We Care About</string>
    <string name="aboutTitle">About</string>
    <string name="cloneContactListTitle">Clone Contact List</string>
    <string name="createContactListTitle">Create Contact List</string>
    <string name="importContactsTitle">Import Contacts</string>
    <string name="viewResponseMessagesTitle">View Response Messages</string>
    <string name="sendEmergencyMessageTitle">Send Message</string>
    <string name="contactListMembersTitle">Contact List Members</string>
    <string name="editContactTitle">Contact</string>
    <string name="contactDetailsTitle">Contact Details</string>
    <string-array name="contactResponseNoteOptions">
        <item>---</item>
        <item>Safe</item>
        <item>Not Safe</item>
    </string-array>
    
    <string name="createContactScreenButtonLabel">Create Contact</string>
    <string name="createContactListScreenButtonLabel">Create Contact List</string>
    <string name="contactInfo">Contact Info</string>
    <string name="editContactListInfo">Edit</string>
    <string name="sendMessageToContactList">Send Message</string>
    
    <string name="firstNameLabel">First Name</string>
    <string name="lastNameLabel">Last Name</string>
    <string name="emailAddressLabel">Email Address</string>
    <string name="phoneNumberLabel">Phone Number</string>
    
    <string name="saveButtonLabel">Save</string>
    <string name="updateButtonLabel">Update</string>
    <string name="cancelButtonLabel">Cancel</string>
    <string name="deleteButtonLabel">Delete</string>
    
    <string name="removeButtonLabel">Remove List</string>
    <string name="cloneButtonLabel">Clone List</string>
    
    <string name="emptyField">Field cannot be blank</string>
    
    <string name="firstNameHint">Example: Bob</string>
    <string name="lastNameHint">Example: Smith</string>
    <string name="emailAddressHint">Example: bsmith@disaster.com</string>
    <string name="phoneNumberHint">Example: 555&#8211;555&#8211;5555</string>
    <string-array name="contactInfoOptions">
        <item>Email Address</item>
        <item>Phone Number</item>
    </string-array>
    <string name="contactSavedTitle">Contact Saved</string>
    <string name="contactSavedMessage">Your contact has been saved</string>
    
    <string name="emergencyMessageFieldHint">Enter custom emergency message</string>
    <string name="sendEmergencyMessageButtonLabel">Send Message</string>
    <string name="createEmergencyMessageScreenButtonLabel">Create Emergency Message</string>
    <string name="recipientsLabel">Recipients:</string>
    <string name="noEmailInformationLabel">
        Warning! You do not have a Google email currently setup!
         If you proceed, you will not send any emails to any contacts!
    </string>
    <string name="noEmailButtonLabel">Setup Email</string>
    
    <string name="listNameLabel">List Name</string>
    <string name="contactsLabel">Contacts</string>
    
    <string name="importLabel">Import</string>
    <string name="importContactsScreenButtonLabel">Import Contacts</string>
    <string name="noContactsToImportLabel">
        Sorry! You have no contacts to import! If you believe a contact is not displaying,
         please make sure the contact has a name, email address, and phone number.
    </string>
    
    <string name="viewResponseMessagesScreenButtonLabel">View Response Messages</string>
    
    <string name="editContactScreenButtonLabel">Edit Contact</string>
    
    <string name="returnToMainScreenButtonLabel">Home</string>
    
    <string name="iconLegendLabel">Icon Key:</string>
    <string name="addContactLabel">= Create Contact</string>
    <string name="addContactListLabel">= Create Contact List</string>
    <string name="importContactsLabel">= Import Contacts</string>
    <string name="readMessagesLabel">= Read Messages</string>
    <string name="aboutButtonLabel">OK, got it</string>
    <string name="detailsLabel">RIIS, LLC \n Version 1.0.0  July 2014 \n </string>
</resources>
