<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:paddingBottom="18sp"
        android:textSize="18sp"
        android:text="@string/userEmailInputLabel" />
    
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="18sp"
        android:text="@string/emailAddressLabel" />
    
    <EditText
        android:id="@+id/emailAddressInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/emailAddressHint" />
    
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="18sp"
        android:text="@string/userEmailPasswordInputLabel" />
    
    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/passwordHint" />
    
    <LinearLayout
        android:id="@+id/buttonRow"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"  
		android:layout_gravity="center_horizontal"
		android:orientation="horizontal" >
	
		<Button
			android:id="@+id/skipButton"
			android:layout_weight="1"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/skipToMainButton"
			android:onClick="skipToMain" />
		
		<Button
			android:id="@+id/submitEmailInfoButton"
			android:layout_weight="1"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/submitEmailInfoButton" 
			android:onClick="submitEmailAndPassword" />
	</LinearLayout>
</LinearLayout>