<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView
        android:id="@+id/First_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstNameLabel" />
    <EditText
        android:id="@+id/first_name_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/firstNameHint"
        android:inputType="textCapWords"
         />
    
    <TextView
        android:id="@+id/Last_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lastNameLabel" />
    <EditText
        android:id="@+id/last_name_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/lastNameHint"
        android:inputType="textCapWords" />
    
    <fragment
        android:name="com.riis.fragments.ContactInfoFragment"
        android:id="@+id/firstContactInfoFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <fragment
        android:name="com.riis.fragments.ContactInfoFragment"
        android:id="@+id/secondContactInfoFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
     
	<LinearLayout
        android:id="@+id/buttonRow"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"  
		android:layout_gravity="center_horizontal"
		android:layout_alignParentBottom="true"
		android:orientation="horizontal" >
	
		<Button
			android:id="@+id/cancelCreateContactButton"
			android:layout_weight="1"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/cancelButtonLabel"
			android:onClick="cancelCreateContact" />
		
		<Button
			android:id="@+id/saveContactButton"
			android:layout_weight="1"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/saveButtonLabel" 
			android:onClick="saveCreateContact" />
	</LinearLayout>
</LinearLayout>
