<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <TextView
        android:id="@+id/noEmailInformationLabel"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@android:color/holo_red_light"
        android:text="@string/noEmailInformationLabel"
        android:gravity="center_horizontal"
        android:visibility="gone" />
    
    <Button
        android:id="@+id/noEmailButton"
        android:layout_below="@id/noEmailInformationLabel"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/button_medium"
        android:text="@string/noEmailButtonLabel"
        android:onClick="setUpEmail"
        android:visibility="gone" />
    
    <EditText
        android:id="@+id/emergencyMessageField"
        android:layout_below="@id/noEmailButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:minLines="4"
        android:gravity="top|left"
        android:hint="@string/emergencyMessageFieldHint" />
    
    <TextView
        android:id="@+id/characterCountLabel"
        android:layout_below="@id/emergencyMessageField"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="right" />
    
    <TextView
        android:id="@+id/recipientsLabel"
        android:layout_below="@id/characterCountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recipientsLabel"
        android:textSize="18sp" />
    
    <LinearLayout
        android:id="@+id/buttonRow"
        android:layout_alignParentBottom="true"
        android:layout_width="fill_parent"    
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal" >
        <Button
	        android:id="@+id/cancelEmergencyMessageButton"
	        android:layout_width="fill_parent"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:text="@string/cancelButtonLabel"
	        android:onClick="cancelSendEmergencyMessage"
	        android:background="@drawable/button_medium" />
        <Button
	        android:id="@+id/sendEmergencyMessageButton"
	        android:layout_width="fill_parent"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:text="@string/sendEmergencyMessageButtonLabel"
	        android:onClick="sendEmergencyMessage"
	        android:background="@drawable/button_medium" />
    </LinearLayout>
    
    <ListView
        android:id="@+id/messageRecipientsList"
        android:layout_above="@id/buttonRow"
        android:layout_below="@id/recipientsLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
		android:dividerHeight="2dp" />
</RelativeLayout>
