<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical" >
        <LinearLayout
	        android:id="@+id/addContactRow"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"  
			android:layout_gravity="bottom"
			android:orientation="horizontal" >
			<TextView
        		android:id="@+id/addContactAboutIcon"
		        android:layout_width="70dp"
		        android:layout_height="70dp"
				android:background="@drawable/add_contact_nine"/>
			<TextView
		        android:id="@+id/addContactAboutLabel"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/addContactLabel" 
		        android:layout_gravity="center_vertical"
				android:textSize="25sp" />
		</LinearLayout>
		
        <LinearLayout
	        android:id="@+id/addListRow"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"  
			android:layout_gravity="bottom"
			android:orientation="horizontal" >
			<TextView
		        android:id="@+id/addListAboutIcon"
		        android:layout_width="70dp"
		        android:layout_height="70dp"
				android:background="@drawable/add_list_nine"/>
			<TextView
		        android:id="@+id/addListAboutLabel"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/addContactListLabel"
		        android:textSize="25sp" 
		        android:layout_gravity="center_vertical"/>
		 </LinearLayout>
		  
		 <LinearLayout
	        android:id="@+id/importContactsRow"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"  
			android:layout_gravity="bottom"
			android:orientation="horizontal" > 
			<TextView
			    android:id="@+id/importContactsAboutIcon"
		        android:layout_width="70dp"
		        android:layout_height="70dp"
				android:background="@drawable/import_contacts_nine"/>
			<TextView
		        android:id="@+id/importContactsAboutLabel"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/importContactsLabel"
	 			android:textSize="25sp"
	 			android:layout_gravity="center_vertical" />
		</LinearLayout>	   
		   
		<LinearLayout
			android:id="@+id/readMessagesRow"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"  
			android:layout_gravity="bottom"
			android:orientation="horizontal" > 
		    <TextView
		        android:id="@+id/readMessagesAboutIcon"
		        android:layout_width="70dp"
		        android:layout_height="70dp"
				android:background="@drawable/read_messages_nine"/>
		    <TextView
		        android:id="@+id/readMessagesAboutLabel"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/readMessagesLabel" 
		        android:layout_gravity="center_vertical" 
				android:textSize="25sp" />
		 </LinearLayout>
		 
		<Button
		    android:id="@+id/aboutCancelButton"
		    android:background="@drawable/button_medium"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:textSize="25sp"
		    android:text="@string/returnToMainScreenButtonLabel"
		    android:onClick="returnHome"
		    android:gravity="center_horizontal" />	
    </LinearLayout>
</ScrollView>