<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/noContactsToImportLabel"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:text="@string/noContactsToImportLabel"
        android:visibility="gone" />
    
    <LinearLayout
        android:id="@+id/buttonRow"
        android:layout_alignParentBottom="true"
		android:layout_width="match_parent"
		android:layout_height="40dp"  
		android:layout_gravity="center_horizontal"
		android:orientation="horizontal" >
	
		<Button
			android:id="@+id/cancelImportContactsButton"
			android:layout_weight="1"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/cancelButtonLabel"
			android:onClick="returnToMainScreen" 
			android:background="@drawable/button_medium"/>
		
		<Button
			android:id="@+id/saveImportedContactsButton"
			android:layout_weight="1"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/importLabel"
			android:onClick="importContacts" 
			android:background="@drawable/button_medium"/>
	</LinearLayout>
    
    <ListView
        android:id="@+id/importedContactsListView"
        android:layout_above="@id/buttonRow"
        android:layout_below="@id/noContactsToImportLabel"
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        android:layout_centerHorizontal="true"
        android:dividerHeight="2dp" />
</RelativeLayout>

